--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@
     color: #F9FAF8;
     width: 75%;
     background: #1F2937;
+    margin: 24px 0px 0px 0px;
 }
 ul
 {
@@ -30,4 +31,59 @@ a
     color: #E5E7EB;
     font-size: 18px;
     margin: 5px;
+}
+img
+{
+    height: 200px;
+    width: 500px;
+    border-radius: 8px;
+    align-self: flex-start;
+    margin: 10px;
+}
+.Sign-up-pitch
+{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 75%;
+    margin: 50px;
+}
+.part1
+{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    background-color: #1F2937;
+    gap: 20px;
+}
+.hero
+{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: flex-start;
+    margin-left: 0px;
+}
+.hero-main
+{
+    font-size: 48px;
+    font-weight: 900;
+    color: #F9FAF8;
+    margin: 10px;
+}
+.hero-scnd
+{
+    font-size: 18px;
+    color: #E5E7EB;
+    margin: 10px;
+}
+.Sign-up
+{
+    background-color: #3882F6;
+    padding: 5px 15px 5px 15px;
+    margin: 5px;
+    border-radius: 8px;
+    border-color: #3882F6;
+    color: #E5E7EB;
 }
