Create Main-content of webpage
Perks of customers are added to "Main-content" of page.

An image is attached to each perk to make page more appealing.

Textual context is given for each perk.

--- a/style.css
+++ b/style.css
@@ -32,13 +32,16 @@ a
     font-size: 18px;
     margin: 5px;
 }
-img
+.gcard
 {
-    height: 200px;
-    width: 500px;
+    display: flex;
     border-radius: 8px;
     align-self: flex-start;
     margin: 10px;
+    justify-content: center;
+    align-items: center;
+    width: 300px;
+    height: 396px;
 }
 .Sign-up-pitch
 {
