--- a/style.css
+++ b/style.css
@@ -90,3 +90,52 @@ a
     border-color: #3882F6;
     color: #E5E7EB;
 }
+
+.part2
+{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items:center;
+}
+.Main-content
+{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    width: 50%;
+    align-items: center;
+}
+.info-header
+{
+    font-weight :800;
+    font-size: 36px;
+    color: #1F2937;
+    margin-top: 12px;
+}
+.image
+{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    gap: 36px;
+    margin-top: 24px;
+}
+img
+{
+    height: 100px;
+    width: 100px;
+    border-radius: 8px;
+}
+.text
+{
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start;
+    gap: 36px;
+}
+p
+{
+    width: 100px;
+    text-align: center;
+}
