Change design of review-section
Background color is changed to make it more appealing.

Review text is italized to improve retention.

Review section is centered to improve user experience.

Reviewer name is bolded to increase retention.

--- a/style.css
+++ b/style.css
@@ -139,3 +139,31 @@ p
     width: 100px;
     text-align: center;
 }
+.review-section
+{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-direction: column;
+    width: 75%;
+}
+.review 
+{
+    font-size: 28px;
+    font-style :italic;
+    margin: 10px;
+}
+.by-text
+{
+    font-size: 24px;
+    font-weight: 800;
+    align-self: flex-end;
+    margin: 5px;
+}
+.part3
+{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #E5E7EB;
+}
