--- a/style.css
+++ b/style.css
@@ -166,4 +166,45 @@ p
     justify-content: center;
     align-items: center;
     background-color: #E5E7EB;
+    margin: 48px 0px 48px 0px;
+    padding: 36px 0px 36px 0px;
+}
+.giveaway
+{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    align-self: center;
+    background-color: #3882F6;
+    color: #E5E7EB;
+    width: 75%;
+    border-radius: 4px;
+    margin: 48px;
+}
+.giveaway .Sign-up
+{
+    border: 2px solid white;
+    box-shadow: none;
+    margin: 36px;
+    padding: 6px 36px 6px 36px;
+}
+.heading
+{
+    font-size: 18px;
+    font-weight: 700;
+    align-self: flex-start;
+}
+.giveaway-text
+{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    padding: 18px 36px 18px 36px;
+}
+.part4
+{
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
