--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@
     color: #F9FAF8;
     width: 75%;
     background: #1F2937;
-    margin: 24px 0px 0px 0px;
+    margin-top: 24px;
 }
 ul
 {
@@ -166,7 +166,7 @@ p
     justify-content: center;
     align-items: center;
     background-color: #E5E7EB;
-    margin: 48px 0px 48px 0px;
+    margin-top: 48px;
     padding: 36px 0px 36px 0px;
 }
 .giveaway
@@ -174,7 +174,6 @@ p
     display: flex;
     justify-content: space-between;
     align-items: center;
-    align-self: center;
     background-color: #3882F6;
     color: #E5E7EB;
     width: 75%;
@@ -186,7 +185,7 @@ p
     border: 2px solid white;
     box-shadow: none;
     margin: 36px;
-    padding: 6px 36px 6px 36px;
+    padding: 6px 12px 6px 12px;
 }
 .heading
 {
@@ -207,4 +206,11 @@ p
     display: flex;
     justify-content: center;
     align-items: center;
+}
+.footer
+{
+    text-align: center;
+    color: #E5E7EB;
+    background-color: #1F2937;
+    padding: 24px 0px 24px 0px;
 }
